# KUITA-C1

./: .gitignore  CLAUDE.md  README.md  idea_brainstorm.md  plan_backend.md  plan_frontend.md  web_design_plan.md
.github/workflows/: backend-tests.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  repository.py  seed.py  selection.py  taxonomy.py
backend/app/llm/: categorise.py  client.py  parsing.py  personalise.py
backend/app/routes/: articles.py  feed.py  ingest.py  profile.py
backend/app/sources/: base.py  govuk.py  rss.py
backend/tests/: conftest.py  test_api.py  test_branding.py  test_parsing.py  test_repository.py  test_selection.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  api.js  categories.js  main.js  tokens.css
frontend/src/components/: CategorySection.vue  LangToggle.vue  NavBar.vue  NewsCard.vue  OnboardingModal.vue  ProfileForm.vue
frontend/src/composables/: useLanguage.js
frontend/src/views/: FeedView.vue  ProfileView.vue
